--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "expo": "~46.0.6",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.13.0",
     "lottie-react-native": "5.1.3",
     "moment": "^2.29.4",
     "react": "18.0.0",
-    "react-native": "^0.69.5",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "~2.9.1",
