--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.23.0",
     "react-native-youtube-iframe": "^2.2.2",
-    "expo-image-picker": "~13.3.1"
+    "expo-image-picker": "~13.3.1",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
